DuelsRoom v1.2
Add a new flag: DUEL_ROOM_THICKNESS. (any value)
Hook with PlaceholderAPI and DeluxeCombat.
Add Commands and Sound when Start or End a duel.
Add an option to set blocks via Spigot API. (And not FAWE or WorldEdit).
Add more options/feature in config.
Support Java 17+.

Add in API: `DuelDoorEvent`